<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".LoginActivity">


    <ProgressBar
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:id="@+id/load_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/login_welcome"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/login"
        android:textSize="20dp"
        android:textColorHint="@color/colorPrimary"
        android:textStyle="bold|italic"
        android:layout_margin="10dp"
        android:layout_weight="1"
        />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="96dp"
            android:layout_height="0dp"
            app:srcCompat="@drawable/group"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:id="@+id/login_image"
            />


    <LinearLayout
        android:id="@+id/login_enters"
        android:padding="20dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/colorPrimaryDark"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:textColorHint="@color/colorPrimaryDark"
            android:layout_height="wrap_content"
            android:id="@+id/login_username"
            android:hint="@string/login_username" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textColorHint="@color/colorPrimaryDark"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/login_password"
            android:textColorHint="@color/colorPrimaryDark"
            android:hint="@string/login_password" />
    </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:visibility="gone"
            android:text="@string/wrong_login_message"
            android:id="@+id/wrong_login"
            />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="18sp"
        android:id="@+id/login_btn"
        android:text="@string/login_btn"
        android:onClick="login"
        android:textColor="@color/colorPrimary"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        />


    </LinearLayout>

</RelativeLayout>