<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:padding="10dp"
        app:cardCornerRadius="20dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        android:id="@+id/job_intro_layout"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_request_job"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:paddingLeft="5dp"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:paddingRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/job_req_title"
                android:inputType="textLongMessage"
                android:hint="@string/job_req_title" />
        </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:paddingRight="10dp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/job_req_price"
                    android:hint="@string/job_req_price" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:paddingRight="10dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:layout_height="wrap_content"
                        android:id="@+id/job_req_date"
                        android:textAlignment="center"
                        />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:layout_height="wrap_content"
                        android:text="@string/job_req_date"

                        />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.8dp"
                    android:background="#000"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="5dp"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:paddingRight="10dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="0dp"
                        android:layout_weight="0.2"
                        android:scaleType="fitXY"
                        android:layout_height="32dp"
                        app:srcCompat="@drawable/eye"
                        android:id="@+id/see_all_times"
                        />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:layout_gravity="center_vertical"
                        android:layout_height="wrap_content"
                        android:id="@+id/job_req_time"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:layout_gravity="center_vertical"
                        android:layout_height="wrap_content"
                        android:text="@string/job_req_time"
                        />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.8dp"
                    android:background="#000"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="5dp"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:paddingRight="10dp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="5"
                    android:id="@+id/job_req_essen"
                    android:hint="@string/job_req_essen" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:paddingRight="10dp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences|textMultiLine"
                    android:lines="7"
                    android:maxLines="10"
                    android:id="@+id/job_req_desc"
                    android:gravity="right|top"
                    android:hint="@string/job_req_desc" />
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/refresh"
                    android:background="@drawable/form_btn"
                    android:layout_marginRight="10dp"
                    android:id="@+id/job_req_reset"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/job_req_submit"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/send"
                    android:background="@drawable/form_btn"
                    android:textSize="18sp"
                    android:textColor="@android:color/white"
                    />


            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</ScrollView>